#22: updating code based on PR suggestions
